
* Sat Apr 6 2013 Thunor <thunorsif@hotmail.com>
- Renamed the recently added --style-sheet command line option to
  --styles which requires a gtkrc for gtk2 or a gtk.css for gtk3.
- Renamed the loadstylesheet action function to loadstyles as it should
  work in gtk2 too but I haven't managed to do that yet. gtk3 works now.
- Added the "column-width" tag attribute to the tree widget.

* Wed Apr 3 2013 Thunor <thunorsif@hotmail.com>
- gtk3: Added the --style-sheet command line option -- still operational
  within a GTK+ 2 build but an unsupported warning message is displayed
  which is preferable to a gtk unknown command line option error.
- gtk3: Added the loadstylesheet action function -- still operational
  within a GTK+ 2 build but an unsupported warning message is displayed.

* Tue Apr 2 2013 Thunor <thunorsif@hotmail.com>
- Added examples/demoscene filled with SFR's awesome demos.

* Mon Apr 1 2013 Thunor <thunorsif@hotmail.com>
- Added gtk3 specific code to the comboboxtext and comboboxentry widgets
  so that they now function identically to the gtk2 equivalents.
- The file selection dialog filename retrieval issue was specific to
  less than gtk-2.4.0 so I've wrapped it in a macro for those versions.
- Added "GTK+ 2/3" to the supported libraries list with gtkdialog -v.
- Added the "column-resizeable" tag attribute to the tree widget.
- Updated a few wiki/reference pages with new info, fixed bad links.
- Added helpful error messages when attempting to create combobox, list
  and table widgets with GTK+ 3.

* Sat Mar 30 2013 Thunor <thunorsif@hotmail.com>
- Added initial support for GTK+ 3 with the --enable-gtk3=yes configure
  option; widgets removed: combobox, list, table; require rewriting:
  comboboxtext, comboboxentry, file selection dialog filename retrieval.

* Sun Jan 6 2013 Thunor <thunorsif@hotmail.com>
- Version 0.8.3 released (r502)
- Finished the Pfeme example application.

* Mon Dec 10 2012 Thunor <thunorsif@hotmail.com>